# Arieo-Application-ScriptTest

./: ArieoPackage.yaml  CMakeLists.txt  arieo_package.json
manifest/: app.manifest.yaml
scripts/: hello.rs
scripts/cxx/: CMakeLists.txt
scripts/cxx/src/: greeting.cpp
scripts/dotnet/: greeter_component.csproj
scripts/dotnet/src/: greeting.cs
scripts/rust/: Cargo.toml
scripts/rust/.cargo/: config.toml
scripts/rust/src/: bindings.rs  greeting.rs  sample.wasm.rs
scripts/wit/: arieo_application.wit
