[package]
name = "greeter-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/greeting.rs"

[dependencies]
wit-bindgen = { version = "0.41", default-features = false, features = ["macros"] }

[package.metadata.component]
package = "arieo:application"

[package.metadata.component.target]
path = "../wit"
world = "application"

[package.metadata.component.target.dependencies]
"arieo:module" = { path = "../wit/deps/arieo-module" }
"arieo:sample" = { path = "../wit/deps/arieo-sample" }

[profile.dev]
debug = true
opt-level = 0
lto = false

[profile.release]
debug = true  # if debugging release builds
lto = false

[build]
target = "wasm32-wasip2"